--- a/tracker-card-templates/dating-card-template-sidebar-tabs.html
+++ b/tracker-card-templates/dating-card-template-sidebar-tabs.html
@@ -361,7 +361,7 @@
               font-style: italic;
             "
           >
-            {{cleanThought stats.internal_thought}}
+            {{{cleanThought stats.internal_thought}}}
           </div>
         </div>
       </div>
